[project]
name = "deployment-coding-dojo"
version = "0.1.0"
description = "trabajo final"
authors = [
    {name = "AnniaBenitez", email = "anniamicaela@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=1.26.0,<2.0.0"
tensorflow = ">=2.12.0,<2.19.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
